Adding Linked Users API - AgAppAdditionalUsers.cs
