# generated/routes.ts
@@ -5,6 +5,8 @@ import type { TsoaRoute } from '@tsoa/runtime';
 import {  fetchMiddlewares, ExpressTemplateService } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { UsersController } from './../src/users/usersController';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { LinkedUsersController } from './../src/users/linkedUsers/linkedUserController';
 import type { Request as ExRequest, Response as ExResponse, RequestHandler, Router } from 'express';
 
 
@@ -32,6 +34,50 @@ const models: TsoaRoute.Models = {
     "UserCreationParams": {
         "dataType": "refAlias",
         "type": {"ref":"Pick_User.email-or-name-or-phoneNumbers_","validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "UserRoles": {
+        "dataType": "refEnum",
+        "enums": ["ADMIN","PILOT","MX","OBS"],
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AdditionalUserFormat": {
+        "dataType": "refObject",
+        "properties": {
+            "userName": {"dataType":"string","required":true},
+            "actualName": {"dataType":"string","required":true},
+            "email": {"dataType":"string","required":true},
+            "permissionsData": {"ref":"UserRoles","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AdditionalUsersReturn": {
+        "dataType": "refObject",
+        "properties": {
+            "additionalUsers": {"dataType":"array","array":{"dataType":"refObject","ref":"AdditionalUserFormat"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "GenericResponse_AdditionalUsersReturn_": {
+        "dataType": "refAlias",
+        "type": {"dataType":"intersection","subSchemas":[{"ref":"AdditionalUsersReturn"},{"dataType":"nestedObjectLiteral","nestedProperties":{"noErrors":{"dataType":"boolean","required":true}}}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "GenericResponse____": {
+        "dataType": "refAlias",
+        "type": {"dataType":"intersection","subSchemas":[{"dataType":"nestedObjectLiteral","nestedProperties":{}},{"dataType":"nestedObjectLiteral","nestedProperties":{"noErrors":{"dataType":"boolean","required":true}}}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Pick_AdditionalUserFormat.userName_": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"userName":{"dataType":"string","required":true}},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Partial_Omit_AdditionalUserFormat.userName__": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"email":{"dataType":"string"},"actualName":{"dataType":"string"},"permissionsData":{"ref":"UserRoles"}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 };
@@ -106,6 +152,129 @@ export function RegisterRoutes(app: Router) {
                 next,
                 validatedArgs,
                 successStatus: 201,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsLinkedUsersController_getLinkedUser: Record<string, TsoaRoute.ParameterSchema> = {
+                linkedAccount: {"in":"path","name":"linkedAccount","required":true,"dataType":"double"},
+        };
+        app.get('/users/linked/:linkedAccount',
+            ...(fetchMiddlewares<RequestHandler>(LinkedUsersController)),
+            ...(fetchMiddlewares<RequestHandler>(LinkedUsersController.prototype.getLinkedUser)),
+
+            async function LinkedUsersController_getLinkedUser(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsLinkedUsersController_getLinkedUser, request, response });
+
+                const controller = new LinkedUsersController();
+
+              await templateService.apiHandler({
+                methodName: 'getLinkedUser',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsLinkedUsersController_addLinkedUser: Record<string, TsoaRoute.ParameterSchema> = {
+                linkedAccount: {"in":"path","name":"linkedAccount","required":true,"dataType":"double"},
+                requestBody: {"in":"body","name":"requestBody","required":true,"ref":"AdditionalUserFormat"},
+        };
+        app.post('/users/linked/:linkedAccount',
+            ...(fetchMiddlewares<RequestHandler>(LinkedUsersController)),
+            ...(fetchMiddlewares<RequestHandler>(LinkedUsersController.prototype.addLinkedUser)),
+
+            async function LinkedUsersController_addLinkedUser(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsLinkedUsersController_addLinkedUser, request, response });
+
+                const controller = new LinkedUsersController();
+
+              await templateService.apiHandler({
+                methodName: 'addLinkedUser',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsLinkedUsersController_deleteLinkedUser: Record<string, TsoaRoute.ParameterSchema> = {
+                linkedAccount: {"in":"path","name":"linkedAccount","required":true,"dataType":"double"},
+                requestBody: {"in":"body","name":"requestBody","required":true,"ref":"Pick_AdditionalUserFormat.userName_"},
+        };
+        app.delete('/users/linked/:linkedAccount',
+            ...(fetchMiddlewares<RequestHandler>(LinkedUsersController)),
+            ...(fetchMiddlewares<RequestHandler>(LinkedUsersController.prototype.deleteLinkedUser)),
+
+            async function LinkedUsersController_deleteLinkedUser(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsLinkedUsersController_deleteLinkedUser, request, response });
+
+                const controller = new LinkedUsersController();
+
+              await templateService.apiHandler({
+                methodName: 'deleteLinkedUser',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsLinkedUsersController_updateLinkedUserPassword: Record<string, TsoaRoute.ParameterSchema> = {
+                linkedAccount: {"in":"path","name":"linkedAccount","required":true,"dataType":"double"},
+                requestBody: {"in":"body","name":"requestBody","required":true,"dataType":"intersection","subSchemas":[{"ref":"Partial_Omit_AdditionalUserFormat.userName__"},{"dataType":"nestedObjectLiteral","nestedProperties":{"userName":{"dataType":"string","required":true}}}]},
+        };
+        app.patch('/users/linked/:linkedAccount',
+            ...(fetchMiddlewares<RequestHandler>(LinkedUsersController)),
+            ...(fetchMiddlewares<RequestHandler>(LinkedUsersController.prototype.updateLinkedUserPassword)),
+
+            async function LinkedUsersController_updateLinkedUserPassword(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsLinkedUsersController_updateLinkedUserPassword, request, response });
+
+                const controller = new LinkedUsersController();
+
+              await templateService.apiHandler({
+                methodName: 'updateLinkedUserPassword',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
               });
             } catch (err) {
                 return next(err);
